Fixed letter spacing bug on Safari

--- a/checkout.css
+++ b/checkout.css
@@ -156,7 +156,7 @@ header > p {
 }
 
 @supports (-webkit-touch-callout: none) {
-    * {
+    .total-title {
         letter-spacing: 0.65px;
     }
 }
